fix: 🐛 correct 100vh on mobile and add link to github in footer

--- a/samples/flip-card/styles.css
+++ b/samples/flip-card/styles.css
@@ -40,8 +40,10 @@
   transition: transform .5s ease-in-out;
 }
 
-.flip-card-inner:hover img {
-  transform: scale(1.1);
+@media (hover: hover) and (pointer: fine) {
+  .flip-card-inner:hover img {
+    transform: scale(1.1);
+  }
 }
 
 .flip-card-back {
